--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
    <parent>
 	   <groupId>org.springframework.boot</groupId>
 	   <artifactId>spring-boot-dependencies</artifactId>
-	   <version>2.1.0.RC1</version>
+	   <version>2.1.0.RELEASE</version>
    </parent>	   
 	<scm>
 		<url>scm:git:https://github.com/DirectProject/direct-msg-monitor-model.git</url>
@@ -39,15 +39,7 @@
         <name>New BSD License</name>
         <url>http://nhindirect.org/BSDLicense</url>
      </license>
-  </licenses>    
-	 <!-- Temp repository for Spring Boot Milestone -->
-	 <repositories>
-       <repository>
-           <id>spring-milestone</id>
-           <name>Spring Milestone Releases</name>
-           <url>https://repo.spring.io/milestone/</url>
-       </repository>
-    </repositories>        
+  </licenses>         
   <dependencies>       
 	    <dependency>
 			<groupId>org.nhind</groupId>
