--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>direct-msg-monitor-model</artifactId>    
     <name>Direct Project Message Monitor Data Model Objects</name>
-    <version>8.0.0</version>
+    <version>8.1.0-SNAPSHOT</version>
     <description>Direct Project Message Monitor Data Model Objects</description>
     <inceptionYear>2018</inceptionYear>
     <url>https://github.com/DirectProjectJavaRI/direct-msg-monitor-model</url> 
